// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LabeledRadioButtonGroup should render correctly should match snapshot 1`] = `
<div
  className="-container"
  input={
    Object {
      "onChange": [MockFunction],
      "value": Object {
        "name": "2T",
      },
    }
  }
>
  <span
    className="-title"
  >
    5T
  </span>
  <div
    className="-items-list"
  >
    <LabeledRadioButton
      aria-describedby="error_2T_0"
      checked={false}
      className="-item"
      disabled={false}
      input={
        Object {
          "name": "2T",
        }
      }
      name="2T_0"
      onChange={[Function]}
      style={Object {}}
      subtitle={
        Array [
          "",
        ]
      }
      tabIndex="0"
      title="Size: "
    >
      <Component />
    </LabeledRadioButton>
    <LabeledRadioButton
      aria-describedby="error_2T_0"
      checked={false}
      className="-item"
      disabled={false}
      input={
        Object {
          "name": "2T",
        }
      }
      name="2T_0"
      onChange={[Function]}
      style={Object {}}
      subtitle={
        Array [
          "",
        ]
      }
      tabIndex="0"
      title="Size: "
    >
      <Component />
    </LabeledRadioButton>
    <LabeledRadioButton
      aria-describedby="error_2T_0"
      checked={false}
      className="-item"
      disabled={false}
      input={
        Object {
          "name": "2T",
        }
      }
      name="2T_0"
      onChange={[Function]}
      style={Object {}}
      subtitle={
        Array [
          "",
        ]
      }
      tabIndex="0"
      title="Size: "
    >
      <Component />
    </LabeledRadioButton>
    <LabeledRadioButton
      aria-describedby="error_2T_0"
      checked={false}
      className="-item"
      disabled={false}
      input={
        Object {
          "name": "2T",
        }
      }
      name="2T_0"
      onChange={[Function]}
      style={Object {}}
      subtitle={
        Array [
          "",
        ]
      }
      tabIndex="0"
      title="Size: "
    >
      <Component />
    </LabeledRadioButton>
    <LabeledRadioButton
      aria-describedby="error_2T_0"
      checked={false}
      className="-item"
      disabled={false}
      input={
        Object {
          "name": "2T",
        }
      }
      name="2T_0"
      onChange={[Function]}
      style={Object {}}
      subtitle={
        Array [
          "",
        ]
      }
      tabIndex="0"
      title="Size: "
    >
      <Component />
    </LabeledRadioButton>
  </div>
</div>
`;

exports[`LabeledRadioButtonGroup should render correctly should return null 1`] = `""`;

exports[`LabeledRadioButtonGroup should render correctly should return null value 1`] = `
<div
  className="-container"
  input={
    Object {
      "onChange": [MockFunction] {
        "calls": Array [
          Array [
            "3T",
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      },
      "value": Object {
        "name": "2T",
      },
    }
  }
>
  <span
    className="-title"
  >
    5T
  </span>
  <div
    className="-items-list"
  >
    <LabeledRadioButton
      aria-describedby="error_2T_5"
      checked={false}
      className="-item"
      disabled={false}
      input={
        Object {
          "name": "2T",
        }
      }
      name="2T_5"
      onChange={[Function]}
      style={Object {}}
      subtitle={
        Array [
          "",
        ]
      }
      tabIndex="0"
      title="Size: "
    >
      <Component />
    </LabeledRadioButton>
    <LabeledRadioButton
      aria-describedby="error_2T_5"
      checked={false}
      className="-item"
      disabled={false}
      input={
        Object {
          "name": "2T",
        }
      }
      name="2T_5"
      onChange={[Function]}
      style={Object {}}
      subtitle={
        Array [
          "",
        ]
      }
      tabIndex="0"
      title="Size: "
    >
      <Component />
    </LabeledRadioButton>
    <LabeledRadioButton
      aria-describedby="error_2T_5"
      checked={false}
      className="-item"
      disabled={false}
      input={
        Object {
          "name": "2T",
        }
      }
      name="2T_5"
      onChange={[Function]}
      style={Object {}}
      subtitle={
        Array [
          "",
        ]
      }
      tabIndex="0"
      title="Size: "
    >
      <Component />
    </LabeledRadioButton>
    <LabeledRadioButton
      aria-describedby="error_2T_5"
      checked={false}
      className="-item"
      disabled={false}
      input={
        Object {
          "name": "2T",
        }
      }
      name="2T_5"
      onChange={[Function]}
      style={Object {}}
      subtitle={
        Array [
          "",
        ]
      }
      tabIndex="0"
      title="Size: "
    >
      <Component />
    </LabeledRadioButton>
    <LabeledRadioButton
      aria-describedby="error_2T_5"
      checked={false}
      className="-item"
      disabled={false}
      input={
        Object {
          "name": "2T",
        }
      }
      name="2T_5"
      onChange={[Function]}
      style={Object {}}
      subtitle={
        Array [
          "",
        ]
      }
      tabIndex="0"
      title="Size: "
    >
      <Component />
    </LabeledRadioButton>
  </div>
</div>
`;
